# HappyBites

./: .env.example  .gitignore  DESIGN.md  Makefile  README.md  alembic.ini  pyproject.toml
.github/workflows/: test.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial_schema.py
data/: seed_deals.json
data/fixtures/: mock_dining.json  mock_yelp.json
data/fixtures/html/: blog_listing.html  menu_page.html  sf_deals.html
data/golden/: normalized_deals.json
data/prompts/: scraping_extraction.txt
frontend/: app.py
happybites/: config.py
happybites/api/: deps.py  geo.py  main.py
happybites/db/: engine.py  models.py  repositories.py
happybites/experiments/: flags.py
happybites/feedback/: events.py  quality.py
happybites/ingestion/: base.py  normalizer.py  orchestrator.py  ranker.py  resolver.py  run.py  scheduler.py  venue_pipeline.py
happybites/normalization/: __init__.py  canons.py  confidence.py  deduplicator.py  normalizer.py  schema.py
happybites/ranking/: engine.py
happybites/schemas/: api.py  internal.py
happybites/scraping/: __init__.py  base.py  llm_extractor.py  pipeline.py  rule_extractor.py  schema.py
happybites/venue_dedup/: __init__.py  matcher.py  resolver.py
scripts/: backfill.py  init_db.py  run_ingest_demo.py  seed_db.py
tests/: conftest.py  test_api.py  test_collectors.py  test_connectors.py  test_feedback.py  test_handlers.py  test_models.py  test_normalization.py  test_normalizer.py  test_orchestrator.py  test_ranker.py  test_ranking.py  test_scraping.py  test_venue_dedup.py
(+16 files in other folders)
