[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "happybites"
version = "0.1.0"
description = "AI-powered deal discovery: ingest, normalize, rank, surface"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "anthropic>=0.28.0",
    "apscheduler>=3.10.0",
    "structlog>=24.1.0",
    "httpx>=0.27.0",
    "feedparser>=6.0.11",
    "python-dotenv>=1.0.1",
    "streamlit>=1.35.0",
    "beautifulsoup4>=4.12.0",
    "rapidfuzz>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["happybites"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
